# Sinapse-Sinum_Integration_for_Home_Assistant

./: .github_release_v0.6.0.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  HACS_SUBMISSION.md  HARDWARE_TEST_PLAN.md  LICENSE  LIVE_TESTING_GUIDE.md  LUA_CODE_REUSE_ANALYSIS.md  MQTT_BRIDGE_OPTIMIZATION.md  MQTT_DEVICE_COVERAGE.md  PHASE_7A_PLAN.md  PHASE_7B2_OPTIONAL.md  PHASE_7B_PLAN.md  PHASE_7E_STATUS.md  PHASE_C_COMPLETION_REPORT.md  PLAN.md  POST_RELEASE_PLAN.md  README.md  README.pl.md  SECURITY.md  SECURITY_SETUP.md  SESSION_SUMMARY_v0.6.0_v0.7.0_KICKOFF.md  V0.7.0_IMPLEMENTATION_PLAN.md  deploy_lua_to_hub.sh  deploy_to_ha.sh  hacs.json  pyproject.toml  pytest.ini  requirements-dev.txt  todo.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  hardware-nightly.yml  lint.yml  quality-dashboard.yml  release-gate.yml  release.yml  test-stability.yml  tests.yml  validate.yml
custom_components/sinum/: __init__.py  _api_devices.py  _api_energy.py  _api_errors.py  _api_helpers.py  _api_response.py  _api_scene.py  _bus_registry.py  _climate_bus_mixin.py  _climate_helpers.py  _config_flow_helpers.py  _coordinator_helpers.py  _cover_helpers.py  _light_helpers.py  _sensor_optional.py  _webrtc.py  _websocket_helpers.py  _websocket_video.py  alarm_control_panel.py  api.py  binary_sensor.py  binary_sensor_parent.py  button.py  camera.py  climate.py  climate_bus.py  climate_fan_coil.py  climate_heat_pump.py  climate_virtual.py  config_flow.py  const.py  coordinator.py  cover.py  cover_gate.py  cover_sbus.py  cover_wtp.py  device_trigger.py  diagnostics.py  event.py  fan.py  (+31 more)
custom_components/sinum/translations/: en.json  pl.json
docs/: api_coverage.md  ci_quality_dashboard.md  development.md  development.pl.md  entities.md  entities.pl.md  hardware_inventory_latest.md  hardware_smoke_latest.md  installation.md  installation.pl.md  live_write_validation_latest.md  live_write_validation_sbus_latest.md  performance_report.md  probe_results_v0.7.0_p4_iaq_aq.md  real-time.md  real-time.pl.md
lua_scripts/: mqtt_bridge.lua  sinapse_api.lua
scripts/: check_release_gate.py  ci_quality_dashboard.py  deploy_rpi.sh  hardware_smoke_check.py  migrate_entity_registry.py  probe_wtp_iaq_payloads.py  validate_api_writes.py  validate_coverage_gates.py  validate_v040_features.py
tests/: conftest.py  test_alarm_control_panel.py  test_api.py  test_api_endpoint_write.py  test_api_extended.py  test_binary_sensor.py  test_binary_sensor_setup.py  test_bus_registry.py  test_button.py  test_camera_platform.py  test_climate.py  test_climate_extended.py  test_climate_fixes.py  test_code_quality.py  test_config_flow.py  test_config_flow_extended.py  test_coordinator.py  test_coordinator_extended.py  test_cover_extended.py  test_coverage_gates.py  test_device_trigger.py  test_diagnostics.py  test_error_handling.py  test_event.py  test_fan.py  test_fan_coil.py  test_full_platform_setup.py  test_init_setup.py  test_integration.py  test_lifecycle.py  test_light_setup.py  test_lora_and_sbus_new.py  test_modbus_sensor.py  test_mqtt.py  test_new_device_types.py  test_new_entities.py  test_new_sbus_types.py  test_notify.py  test_number_extended.py  test_protocol_contracts.py  (+19 more)
tests/fixtures/: sinum_devices.json
tests/hardware_in_loop/: hil_api_coverage.py  hil_smoke.py  hil_websocket.py
