[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinapse-homeassistant-sinum"
version = "0.8.2"
description = "Sinapse - Sinum Integration for Home Assistant"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Tomasz Panek", email = "zaba9214@gmail.com"}]
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "C901",   # mccabe complexity
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
# Ruff/McCabe counts nested service handlers differently than the Radon quality gate.
# tests/test_code_quality.py remains the source of truth for the project CC <= 4 rule.
max-complexity = 8

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true
